# networked-choir-entanglement

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  OSN.pptx  PAPER_LINKS.md  PROJECT_GUIDE.md  README.md  TEAM_BRIEF.md  apr30_deck.md  apr30_qa_prep.md  apr30_script.md  dpia_outline_sprint2.md  extract_pdf.py  implementation_plan.md  may21_deck.md  may21_qa_prep.md  may21_script.md  osn_master_prompt.md  pyproject.toml  retrospective_sprint1.md  sprint3_results.md  virtual_mirror_sprint1.md  wp2_calibration_sprint2.md
.github/workflows/: ci.yml
AI literature/: found_papers.md
data/: nmp_choir_corpus_strict.csv  tier1_corpus_manifest.csv  zoom_only_candidates.csv
data/processed/dagstuhl/: _et_corpus.csv  _network_metrics.csv  _summary.csv
data/processed/tier1/: _pose_summary.csv
data/raw/dagstuhl/: README.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  wireframe.md
frontend/src/: App.tsx  index.css  plotly-shim.d.ts  types.ts
frontend/src/components/: GraphPanel.tsx  MetadataPanel.tsx  TimelinePanel.tsx  VideoPanel.tsx
onsidian vault/OSN-M/: CLAUDE.md  PAPER_LINKS.md
onsidian vault/OSN-M/.claude/: settings.local.json
onsidian vault/OSN-M/.obsidian/: graph.json  workspace.json
onsidian vault/OSN-M/raw/: Chapter_14_Upgraded_Presentation.pptx  CyberneticAlchemy_Seminar_SignUp2.xlsx  SignUpSheet4ProjectsCOINs_26.xlsx  Tips for groupwork_COINs25.pptx  apr30_deck_script.md  coins_evaluation_criteria.txt  email_hacker_tier0_reply.txt  hacker_url_list.csv  info.txt  presentation_deliverables.md  status_meeting_3_notes.txt
onsidian vault/OSN-M/wiki/: Project_8_MOC.md  Project_Overview.md  Project_Phase_Roster.md  Team_Profile.md  index.md  log.md
output/: apr30_status_meeting_ii.pptx
scripts/: add_zoom_supplement.py  build_apr30_deck.mjs  build_tier1_manifest.py  download_and_hash_tier1.py  et_demo.py  et_full_corpus.py  generate_apr30_pptx.py  pptx_to_images.py  revalidate_dead_urls.py  search_zoom_only_candidates.py  wp1_dagstuhl_batch.py  wp1_dagstuhl_demo.py  wp2_figure.py  wp2_tier1_batch.py  wp2_tier1_demo.py  wp3_dagstuhl_batch.py  wp3_dagstuhl_demo.py  wp4_alchemical_diagram.py
src/choir_entanglement/: __init__.py  entanglement.py
src/choir_entanglement/audio/: __init__.py  coupling.py  pipeline.py
src/choir_entanglement/dashboard/: __init__.py  app.py
src/choir_entanglement/network/: __init__.py  granger.py  influence_graph.py
tests/: conftest.py  test_audio_pipeline.py  test_entanglement.py  test_network_granger.py  test_smoke.py  test_video_pose.py
(+117 files in other folders)
