[project]
name = "choir-entanglement"
version = "0.0.1"
description = "Networked choir entanglement platform for SNA-OSN-M Project 8"
readme = "README.md"
requires-python = "==3.11.9"
license = { text = "MIT" }
authors = [
    { name = "Zuraiz", email = "zuraiz@stud.uni-bamberg.de" },
    { name = "Hammad Anwar", email = "hammad.anwar@stud.uni-bamberg.de" },
    { name = "Hassan Ahmed", email = "hassan.ahmed@stud.uni-bamberg.de" },
    { name = "Kumaran Vasu", email = "kumaran.vasu@stud.uni-bamberg.de" },
]

dependencies = [
    "numpy==1.26.4",
    "scipy==1.13.1",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "matplotlib==3.9.0",
]

[project.optional-dependencies]
wp1-audio = [
    "librosa==0.10.2",
    "demucs==4.0.1",
    "soundfile==0.12.1",
    "ffmpeg-python==0.2.0",
]
wp2-video = [
    "mediapipe==0.10.14",
    "opencv-python==4.10.0.84",
    # py-feat==0.6.2 intentionally deferred: transitively requires nltools>=0.5.1
    # which caps numpy<1.24, conflicting with our numpy==1.26.4 pin. V5 FFI-proxy
    # (py-feat) is a §11.2 secondary feature; WP2 sub-plan adds it with a resolved
    # numpy strategy. Tracked in PROJECT_GUIDE.md §12 L-H-9.
]
wp3-network = [
    "networkx==3.3",
    "statsmodels==0.14.2",
    "python-louvain==0.16",
    "teneto==0.5.3",
    "scikit-learn==1.5.1",
]
wp4-dashboard = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.5.5",
    "mypy==1.10.1",
    "pre-commit==3.7.1",
]
all = [
    "choir-entanglement[wp1-audio,wp2-video,wp3-network,wp4-dashboard]",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/choir_entanglement"]

[tool.uv]
# Resolve for the platforms we actually run on: team on Win 11, CI / Docker on Linux.
# macOS omitted: no team member on Mac, and some scientific wheels (mediapipe, py-feat)
# have ARM64-macOS gaps that would fail resolution on unused platforms.
environments = [
    "sys_platform == 'win32' and python_version == '3.11'",
    "sys_platform == 'linux' and python_version == '3.11'",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
